Update resume s/OpenWest/ReCollect/ and avoid line-breaks on sections when printing

--- a/style.sass
+++ b/style.sass
@@ -78,6 +78,9 @@ ul
     font-style: italic
     color: #666
 
+.avoid-breaks
+  page-break-inside: avoid
+
 dt
   font-style: italic
   font-weight: bold
@@ -103,3 +106,5 @@ dd
   text-align: center
   color: #999
   font-size: 8pt
+  @media print
+    display: none
